# Chifoumi

./: .gitignore  CMakeLists.txt  README.md
doc_doxygen/: CMakeLists.txt  Doxyfile  Doxyfile.in
doc_sphinx/: Makefile
doc_sphinx/source/: chifoumi_cli.rst  chifoumi_gui.rst  conf.py  index.rst  installation.rst
src/: Game.cpp  Game.hpp  Game_test.cpp  Random.cpp  Random.hpp  main.cpp
